--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,1 +1,17 @@
-<b>{{  text }} </b>
+<table class="table">
+<thead>
+<tr>
+<td>Content</td>
+<td>Time</td>
+<td>Status</td>
+</tr>
+</thead>
+<tbody>
+{% for t in todos %}
+<tr>
+<td>{{ t.content }}</td>
+<td>{{ t.time }}</td>
+<td>{{ t.status }}</td>
+</tr>
+{% endfor %}
+</tbody>
